Fix alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,3 +45,21 @@
 .block{
     display: block;
 }
+
+.lowmarginbottom {
+    margin-bottom: -2%;
+}
+.lowmargintop {
+    margin-top: -2%;
+}
+.avatar-lowmargintop {
+    margin-top: -14%;
+}
+
+.footer-lowmarginbottom {
+    margin-bottom: -1%;
+}
+
+.profile-font {
+    font-size: 10px;
+}
